Removed Yum because of Dandified Yum (blerrgh)
I know that dnf is just a wrapper around yum at the moment, but better to be accurate with commands I guess.

--- a/docs/install-toolchain.adoc
+++ b/docs/install-toolchain.adoc
@@ -52,11 +52,11 @@ See the {java}[Asciidoctor Java integration project] for more information.
 
 include::{includedir}/install-upgrade-asciidoctor.adoc[tags=bundler]
 
-=== Install with +yum+
+=== Install on RPM-based Systems
  
 include::{includedir}/install-upgrade-asciidoctor.adoc[tags=yum]
 
-=== Install with +apt-get+
+=== Install on Debian-based Systems
  
 include::{includedir}/install-upgrade-asciidoctor.adoc[tags=aptget]
 
